--- a/assets/styles/contato.css
+++ b/assets/styles/contato.css
@@ -1,7 +1,3 @@
-form{
-    background: url('../images/ilustra-contato.png');
-    
-}
 main{
     width: 1440px;
     padding: 100px 0;
@@ -50,3 +46,22 @@ button{
 :focus{
     outline: 0;
  }
+
+ @media screen and (max-width: 769px){
+    body{
+        justify-content: center;
+        text-align: center;
+    }
+    main{
+        width: 768px;
+    }
+}
+
+@media screen and (max-width: 481px){
+    main{
+        width: 480px;
+    }
+    input, textarea{
+        width: 400px;
+    }
+}
