--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -110,7 +110,7 @@ main > section{
 .post{
     width: 319px;
 }
-.blog a, .banner a{
+.blog div > a, .banner a{
     text-align: center;
     padding: 10px 40px;
     border: 2px solid #FF4081;
